# anti-addiction_sudoku

./: .gitignore  README.md  pyproject.toml
anti_sudoku/: __init__.py  __main__.py  cli.py  server.py
anti_sudoku/solver/: pipeline.py  sudoku_generator.py
anti_sudoku/web/: index.html
